Fixed keys AND displayMan alignment

--- a/src/components/style/DisplayMan.module.css
+++ b/src/components/style/DisplayMan.module.css
@@ -1,11 +1,6 @@
 .DisplayMan {
-	/* position: fixed;
-	z-index: 1;
-	background-color: rgba(0, 0, 0, 0.75);
-	width: 100%;
-	height: 100vh;
-	top: 0;
-	left: 0;
+	align-items: center;
 	justify-content: center;
-	*/
+	display: flex;
+	flex-direction: column;
 };
